# LittleWooden

./: CMakeLists.txt  CMakePresets.json  Utils.cmake  vcpkg.json
App/src/: main.cpp
Core/: CMakeLists.txt
Core/src/: CMakeLists.txt  core.cpp  core.ixx
Editor/: CMakeLists.txt
Editor/src/: CMakeLists.txt
